# spotlight

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_release.yml
include/: MainWindow.h
src/: MainWindow.cpp  main.cpp
